# tfpackage

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  deps.bzl  go.mod  go.sum  jest.config.js  package-lock.json  package.json  tsconfig.json
apps/backend/src/: BUILD.bazel  main.ts
apps/backend/test/: BUILD.bazel  app.spec.ts
infra/apps/backend/src/: .tflint.hcl  BUILD.bazel  README.md  container_instance.tf  data.tf  image_id.sh  outputs.tf  providers.tf  push.sh  service_principal.tf  variables.tf
infra/apps/backend/test/: BUILD.bazel  README.md  provider_fixture.tf  stack_test.go
infra/apps/backend/test/container_fixture/: BUILD.bazel  main.go
infra/shared/: BUILD.bazel  test_helper.go
infra/src/: BUILD.bazel  README.md  stack.tf
infra/test/: BUILD.bazel  README.md  stack_test.go
patches/: @bazel+typescript+3.6.0.patch.bak
rules/: BUILD.bazel  ensure_platform.bzl  jest.bzl  terraform_test.bzl
rules/terraform_test/: tflint.sh  validate.go
tools/: bazel_deps.bzl
