load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//rules:terraform_test.bzl", "terraform_validate_test")

package(default_visibility = ["//visibility:public"])

pkg_tar(
    name = "src",
    srcs = glob(["*.tf"]) + ["//:terraform"],
    mode = "0440",
    modes = {
        "terraform": "0550",
    },
)

terraform_validate_test(
    name = "validate",
    size = "small",
    srcs = glob([
        "*.tf",
    ]),
)
