load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "test_test",
    size = "small",
    timeout = "moderate",
    srcs = ["stack_test.go"],
    data = [
        "//infra/src",
    ],
    tags = [
        "integration",
        "manual",
    ],
    deps = [
        "//infra/shared",
        "@com_github_gruntwork_io_terratest//modules/terraform",
        "@com_github_stretchr_testify//assert",
    ],
)
