load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//rules:terraform_test.bzl", "terraform_validate_test", "terraform_lint_test")

package(default_visibility = ["//visibility:public"])

pkg_tar(
    name = "src",
    srcs = glob([
        "*.tf",
        "*.sh",
    ]) + [
        "//:terraform",
        "//apps/backend/src:docker_linux",
    ],
    mode = "0440",
    modes = {
        "terraform": "0550",
        "push.sh": "0550",
        "image_id.sh": "0550",
    },
)

terraform_validate_test(
    name = "validate",
    size = "small",
    srcs = glob([
        "*.tf",
    ]),
)

terraform_lint_test(
    name = "lint",
    size = "small",
    srcs = glob([
        "*.tf",
        ".tflint.hcl",
    ]),
)
