load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//rules:terraform_test.bzl", "terraform_lint_test", "terraform_validate_test")

package(default_visibility = ["//visibility:public"])

pkg_tar(
    name = "infra",
    srcs = glob([
        "*.tf",
        "*.sh",
    ]) + [
        "//:terraform",
    ],
    mode = "0440",
    modes = {
        "terraform": "0550",
        "push.sh": "0550",
        "image_id.sh": "0550",
    },
)

pkg_tar(
    name = "bundle",
    srcs = ["//apps/backend/src:docker_linux"],
    deps = [":infra"],
)

terraform_validate_test(
    name = "validate",
    size = "small",
    srcs = glob([
        "*.tf",
    ]),
)

terraform_lint_test(
    name = "lint",
    size = "small",
    srcs = glob([
        "*.tf",
        ".tflint.hcl",
    ]),
)
