load("@io_bazel_rules_go//go:def.bzl", "go_test")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "bundle",
    srcs = ["//infra/apps/backend/test/container_fixture:docker_linux"],
    deps = ["//infra/apps/backend/src:infra"],
)

go_test(
    name = "test_test",
    size = "small",
    timeout = "long",
    srcs = ["stack_test.go"],
    data = [
        ":bundle",
    ] + glob(["*.tf"]),
    tags = [
        "integration",
    ],
    deps = [
        "//infra/shared",
        "@com_github_gruntwork_io_terratest//modules/http-helper",
        "@com_github_gruntwork_io_terratest//modules/terraform",
        "@com_github_stretchr_testify//assert",
    ],
)
